--- a/index.html
+++ b/index.html
@@ -2,11 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="js.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="top">
+
+    </div>
+    <div id="mid">
+        <div id="calcBox">
+            <div id="screenBox"></div>
+            <div id="buttonBox">
+                <div id="topButtons">
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                </div>
+                <div id="midButtons">
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                </div>
+                <div id="buttons">
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                    <button class="buttons"></button>
+                </div>     
+            </div>
+        </div>
+    </div>
+    <div id="bot">
+
+    </div>
 </body>
 </html>
