--- a/index.html
+++ b/index.html
@@ -14,23 +14,30 @@
     </div>
     <div id="mid">
         <div id="calcBox">
-            <div id="screenBox"></div>
+            <div id="screenBox">
+                <span id="screen"></span>
+            </div>
             <div id="buttonBox">
                 <div id="topButtons">
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
+                    <button class="buttons" id="1buttton">1</button>
+                    <button class="buttons" id="2button">2</button>
+                    <button class="buttons" id="3button">3</button>
+                    <button class="buttons" id="+button">+</button>
+                    <button class="buttons" id="-button">-</button>
                 </div>
                 <div id="midButtons">
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
+                    <button class="buttons" id="4button">4</button>
+                    <button class="buttons" id="5button">5</button>
+                    <button class="buttons" id="6button">6</button>
+                    <button class="buttons" id="*button">*</button>
+                    <button class="buttons" id="*button">/</button>
                 </div>
-                <div id="buttons">
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
-                    <button class="buttons"></button>
+                <div id="botButtons">
+                    <button class="buttons" id="7button">7</button>
+                    <button class="buttons" id="8button">8</button>
+                    <button class="buttons" id="9button">9</button>
+                    <button class="buttons" id="0button">0</button>
+                    <button class="buttons" id=".button">.</button>
                 </div>     
             </div>
         </div>
