--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+
+<!-- 
+    bg img = https://unsplash.com/photos/4nKOEAQaTgA?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +20,7 @@
     <div id="mid">
         <div id="calcBox">
             <div id="screenBox">
-                <span id="screen"></span>
+                <span id="screen"> </span>
             </div>
             <div id="buttonBox">
                 <div id="topButtons">
@@ -38,12 +43,19 @@
                     <button class="buttons" id="9button">9</button>
                     <button class="buttons" id="0button">0</button>
                     <button class="buttons" id=".button">.</button>
-                </div>     
+                </div>
+                <div id="lowestButtons">
+                    <button class="lowButtons" id="clearButton">AC</button>
+                    <button class="lowButtons" id="equalButton">=</button>
+                    
+                </div>
             </div>
         </div>
     </div>
     <div id="bot">
-
+        
     </div>
+    <div id="cc">2022</div>
+
 </body>
 </html>
